# ZONES

./: Cargo.toml  LICENSE  PRODUCT_PLAN.md  README.md
.claude/: panel.json
.roles/: ROLE.md
.roles/parliament/: boundary-data-steward.md  civil-time-policy-reviewer.md  graph-optimization-reviewer.md  public-map-editor.md  solar-time-methodologist.md
context/waves/: PHASES.md
crates/zones-cli/: Cargo.toml
crates/zones-cli/src/: main.rs
crates/zones-core/: Cargo.toml
crates/zones-core/src/: lib.rs
data/boundaries/: seed-boundaries.geojson  us-county-seed-boundaries.geojson
data/geometry-reconciliation/: us-county-seed-dot-reconciliation.json
data/legal-assignments/: us-county-seed-current-law.json  us-county-smoke-current-law.json
data/module-boundaries/: zones-rplan-rline.json
data/plan-inputs/: seed-plan-map-points.json  seed-plan.json  us-county-baseline-seed.json  us-county-baseline-smoke.json  us-county-smoke.json
data/representative-points/: us-county-seed-gazetteer.json  us-county-smoke-gazetteer.json
data/rplan-contexts/: us-county-seed-rplan-context.json  us-county-smoke-rplan-context.json
data/source-endpoints/: census-tigerweb-counties.json  dot-time-zones-arcgis.json
data/source-gates/: us-foundation-source-gate.json
data/source-limitation-matrix/: global-source-claims.json
data/source-manifests/: us-foundation.json
data/temporal-fixtures/: non-us-pilot.json
docs/research/: README.md  (+7 more)
research/: PAPERS.md  RESEARCH.md  TRACKING.md  WAVE_TO_PAPER_ANALYSIS.md
scripts/: write-national-exploratory-county-maps.ps1
(+30 files in other folders)
