[package]
name = "zones-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rplan-core.workspace = true
serde.workspace = true
serde_json.workspace = true
zones-core.workspace = true
